# XES_SQ3_Converter_lib

./: CMakeLists.txt  README.md  activitylog_uci_detailed_labour.xes
includes/: PrepareDatabase.hpp  Sq3ToXesConverter.hpp  XesElements.hpp  XesToSq3Converter.hpp  XesToSq3Handler.hpp  XesWriter.hpp  exceptions.hpp  utils.hpp
src/: PrepareDatabase.cpp  XesElements.cpp  XesSq3Converter.cpp  XesToSq3Converter.cpp  XesToSq3Handler.cpp  XesWriter.cpp  exceptions.cpp  utils.cpp
